# WorldSeedProject

./: .gitignore  Dockerfile  Makefile  Project Plan.txt  Python More Granular.txt  Python Plan.txt  README.md  main.py  requirements.txt  test.py
character_creation_package/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  hero.json  hero2.json  pyproject.toml
character_creation_package/.github/workflows/: ci.yml
character_creation_package/character_creation/: __init__.py  errors.py
character_creation_package/character_creation/data/: classes.yaml  content_packs.yaml  creation_limits.yaml  dev_config.yaml  difficulty.yaml  formulas.yaml  items.yaml  progression.yaml  races.yaml  resources.yaml  resources_config.yaml  slots.yaml  status_effects.yaml  traits.yaml
character_creation_package/character_creation/loaders/: __init__.py  appearance_loader.py  classes_loader.py  items_loader.py  (+12 more)
character_creation_package/saves/: saverhero.yaml
character_creation_package/scripts/: __init__.py  create_character.py  demo_save_load.py  dev_watch.py  generate_npcs.py  grant_xp.py  list_content_packs.py  run_qt.py  run_qt_aurora.py  run_tui.py  sim_regen.py  sim_status_effects.py  validate_data.py
character_creation_package/tests/: test_appearance_cli.py  test_balance_difficulty_effects.py  test_character_init_flow.py  test_character_model.py  test_character_yaml_integration.py  test_content_packs_in_wizard.py  test_content_packs_merge.py  test_creation_logic.py  test_data_integrity.py  test_data_validation.py  test_formula_eval.py  test_inventory_consistency.py  test_items_and_equipment.py  test_leveling.py  test_live_reload_reloader.py  test_npc_generation.py  test_races.py  test_random_utils.py  test_regen.py  test_save_load.py  test_save_load_race_appearance.py  test_status_effects.py  test_summary_fields.py  test_textual_state.py  test_textual_state_appearance.py  test_trait_limits.py  test_wizard_smoke.py
combat_package/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
combat_package/combat/: __init__.py
combat_package/scripts/: run_battle_cli.py  validate_content.py
combat_package/tests/: test_abilities_core.py  test_ai_rules_and_threat.py  test_damage_math.py  test_effects_burning.py  test_effects_stack.py  test_guard_and_taunt.py  test_hazards_basic.py  test_items_use.py  test_mvp_flow.py  test_narration_variety.py  test_packs_and_validation.py  test_snapshot_restore.py  test_targeting_expanded.py  test_turn_phases_and_events.py
combat_package/worldseed_combat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+102 files in other folders)
